I3: Number guessing game complete

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,17 @@
 <html>
   <head></head>
   <body>
+    <form>
+      <input type='text' name='guess' />
+      <input type='submit' value='Guess!' />
+    </form>
     <p>
-      The SECRET NUMBER is <%= number %>
+      <%= message %>
     </p>
+    <% if @correct %>
+      <p>
+        The SECRET NUMBER is <%= number %>
+      </p>
+    <% end %>
   </body>
 </html>
